[gd_scene load_steps=10 format=3 uid="uid://8hxy6742wtrr"]

[ext_resource type="Script" uid="uid://bsdf75enhuvtm" path="res://Scenes/UI/starter_character_picker.gd" id="1_ka475"]
[ext_resource type="Resource" uid="uid://nle813selunr" path="res://Scenes/Run/run_startup.tres" id="2_gx57u"]
[ext_resource type="Texture2D" uid="uid://bap7boopew7cu" path="res://art/characters/warrior.png" id="2_ka475"]
[ext_resource type="Texture2D" uid="uid://bitspch5jco18" path="res://art/characters/druid.png" id="3_gx57u"]

[sub_resource type="Gradient" id="Gradient_36iwh"]
offsets = PackedFloat32Array(0, 0.996269)
colors = PackedColorArray(0.142858, 0.142858, 0.142858, 1, 0.258487, 0.421322, 0.524164, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5wsvm"]
gradient = SubResource("Gradient_36iwh")

[sub_resource type="LabelSettings" id="LabelSettings_i2xx2"]
font_size = 80
shadow_size = 10
shadow_color = Color(0.635294, 0.309804, 0, 0.52549)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_7cbnv"]
font_size = 50
shadow_size = 10
shadow_color = Color(0.635294, 0.309804, 0, 0.52549)
shadow_offset = Vector2(5, 5)

[sub_resource type="ButtonGroup" id="ButtonGroup_5hekf"]

[node name="StarterCharacterPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ka475")
run_startup = ExtResource("2_gx57u")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_5wsvm")

[node name="CharacterText" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -466.5
offset_top = 45.0
offset_right = 466.5
offset_bottom = 300.0
grow_horizontal = 2

[node name="Title" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "Warrior"
label_settings = SubResource("LabelSettings_i2xx2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="CharacterText"]
unique_name_in_owner = true
layout_mode = 2
text = "All out attacking!
It's the best form of defense, after all..."
label_settings = SubResource("LabelSettings_7cbnv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = -353.0
offset_right = 369.0
offset_bottom = -53.0
grow_vertical = 0
texture = ExtResource("2_ka475")
expand_mode = 1
stretch_mode = 5

[node name="SelectButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -148.0
offset_right = -58.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 0
text = "Select"

[node name="CharacterButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 23.0
offset_right = 120.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="WarriorButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_5hekf")

[node name="Icon" type="TextureRect" parent="CharacterButtons/WarriorButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ka475")
expand_mode = 1
stretch_mode = 5

[node name="DruidButton" type="Button" parent="CharacterButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_5hekf")

[node name="Icon" type="TextureRect" parent="CharacterButtons/DruidButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_gx57u")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="CharacterButtons/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="pressed" from="CharacterButtons/DruidButton" to="." method="_on_druid_button_pressed"]
